third_party/move/tools/move-unit-test/tests/test_sources/signer_args.exp
Running Move unit tests
[ FAIL    ] 0x1::M::multi_signer_fail
[ PASS    ] 0x1::M::multi_signer_pass
[ PASS    ] 0x1::M::multi_signer_pass_expected_failure
[ FAIL    ] 0x1::M::single_signer_fail
[ PASS    ] 0x1::M::single_signer_pass
[ PASS    ] 0x1::M::test_correct_signer_arg_addrs
0x1::M::multi_signer_fail
Output: Ok(Changes { accounts: {} })
0x1::M::multi_signer_pass
Output: Ok(Changes { accounts: {} })
0x1::M::multi_signer_pass_expected_failure
Output: Ok(Changes { accounts: {} })
0x1::M::single_signer_fail
Output: Ok(Changes { accounts: {} })
0x1::M::single_signer_pass
Output: Ok(Changes { accounts: {} })
0x1::M::test_correct_signer_arg_addrs
Output: Ok(Changes { accounts: {} })

Test failures:

Failures in 0x1::M:

┌── multi_signer_fail ──────
│ Test did not error as expected
└──────────────────


┌── single_signer_fail ──────
│ error[E11001]: test failure
│   ┌─ signer_args.move:9:9
│   │
│ 8 │     fun single_signer_fail(_a: signer) {
│   │         ------------------ In this function in 0x1::M
│ 9 │         abort 0
│   │         ^^^^^^^ Test was not expected to error, but it aborted with code 0 originating in the module 0x1::M rooted here
│ 
│ 
└──────────────────

Test result: FAILED. Total tests: 6; passed: 4; failed: 2
